<resources>
    <string name="app_name">SberFragmentManualTwo</string>
    <string name="replace_fragment">Replace fragment</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="add_to_backstack">add to backstack</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="fragment_in_backstack">Fragment in backstack %1$d!</string>
</resources>