<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CFFC107"
    tools:context=".FragmentFirst">

    <RadioGroup
        android:id="@+id/radio_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/margin_double"
        android:layout_marginTop="@dimen/margin_double"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add_fragment" />

        <RadioButton
            android:id="@+id/radio_replace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_fragment" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/check_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_double"
        android:text="@string/add_to_backstack"
        app:layout_constraintBottom_toBottomOf="@+id/radio_container"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        android:layout_marginBottom="@dimen/margin_double"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_remove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_container"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="@+id/btn_add" />
</androidx.constraintlayout.widget.ConstraintLayout>
